--- a/sass/page-header.scss
+++ b/sass/page-header.scss
@@ -56,6 +56,7 @@
     background-size: cover;
     background-size: 768px auto;
     background-position: 50% 0%;
+    margin-top: 58px;
 }
 
   .page-header__index {
@@ -93,6 +94,7 @@
     width: 100%;
     min-height: 475px;
     margin: 0 auto;
+    margin-top: 58px;
     padding: 0;
     background-size: 1200px auto;
 }
