--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 @import "colors.scss";// цвета сайта
 @import "fonts.scss";//шрифты сайта
 @import "mixins.scss";//миксины сайта
-@import "variables.scss";// перменные сайта
+@import "variables.scss";// переменные сайта
 @import "body.scss";// стили для body
 @import "container.scss";//стили для главной и общей обертки сайта
 @import "container-page.scss"; //стили для обертки тега main
