--- a/sass/games-preview.scss
+++ b/sass/games-preview.scss
@@ -1,47 +1,67 @@
-.features-1 {
-  @include clearfix;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.features-1,
-.features-2,
-.features-3 {
+.game-preview {
   display: flex;
   flex-direction: row;
   align-items: center;
+  background-color: $main-dark-blue-hover;
+  padding: 20px 0px;
+  border-radius: 25px;
+  border: 0.5px solid white;
+  margin: 30px auto;
+  opacity: 0.96;
+    @media (max-width: $mobile-widths) {
+      flex-direction: column;
+    }
+    @media (min-width: $tablet-widths) {
+      &:nth-of-type(2) {
+        flex-direction: row-reverse;
+      }
+      &:nth-of-type(2) .game-preview__block  {
+        margin-left: 0px;
+        margin-right: 10px;
+        border-radius: 10px 40px 10px 10px;
+      }
+    }
+    @media (min-width: $desktop-widths) {
+      width: 1000px;
+      padding: 20px 5px;
+      &:nth-of-type(2) {
+        flex-direction: row-reverse;
+      }
+    }
 }
 
-/*Текст красной шапочки*/
+/*Блок с описанием игры и кнопками*/
 
-.block-3 {
+.game-preview__block {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  @include clearfix;
-  float: left;
   width: 255px;
-  min-height: 300px;
+  min-height: 340px;
   color: white;
   background: #6B7AD6;
   margin-left: 10px;
+  border-radius: 40px 10px 10px 10px;
+    @media (max-width: $mobile-widths) {
+      margin: 0px;
+    }
 }
 
-.title-link {
+.game-preview__title-link {
   display: block;
   text-decoration: none;
   color: white;
 }
 
-.title-link:hover {
+.game-preview__title-link:hover {
   color: #051471;
 }
 
-.title-link:active {
+.game-preview__title-link:active {
   color: #bdbbbc;
 }
 
-.near-photo-text-1 {
+.game-preview__title {
   padding: 0px 20px;
   line-height: 1.25;
   margin: 10px 0px 12px 0px;
@@ -51,7 +71,7 @@
   font-size: 21px;
 }
 
-.near-photo-text-2 {
+.game-preview__text {
   padding-top: 5px;
   line-height: 1.2;
   padding: 0px 10px 0px 10px;
@@ -66,11 +86,11 @@
 
 /*Кнопка подробнее*/
 
-.sort-column-1-buttons {
+.game-preview__buttons-block {
   display: flex;
 }
 
-.sort-column-1-link {
+.game-preview__button-details {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -85,13 +105,18 @@
   background-color: #051471;
   border-radius: 5px;
   text-align: center;
+    @media (max-width: $mobile-widths) {
+      & span {
+      display: none;
+      }
+    }
 }
 
-.sort-column-1-link-flex {
+.game-preview__button-details-flex {
   display: flex;
 }
 
-.sort-column-1-link p {
+.game-preview__button-details p {
   text-align: center;
   margin: 0px;
   padding: 0px;
@@ -102,32 +127,32 @@
   letter-spacing: 0.9px;
 }
 
-.sort-column-1-link:hover {
+.game-preview__button-details:hover {
   background-color: #4458D6;
   color: white !important;
 }
 
-.sort-column-1-link:active p {
+.game-preview__button-details:active p {
   opacity: 0.5;
 }
 
-.sort-column-1-link-barbarian {
+.game-preview__button-details--barbarian {
   margin: 15px 5px 15px 10px;
   padding: 15px 10px;
   width: 70px;
 }
 
-.sort-column-1-link-barbarian-rus {
+.game-preview__button-details--barbarian-rus {
   padding: 15px 0px;
 }
 
-.sort-column-1-link-barbarian-rus p {
+.game-preview__button-details--barbarian-rus p {
   letter-spacing: 0.75px;
 }
 
-/*Кнопка steam*/
+/*Кнопки*/
 
-.steam-btn {
+.game-preview__button-steam {
   float: right;
   width: 105px;
   height: 65px;
@@ -140,256 +165,85 @@
   border-radius: 5px;
 }
 
-.steam-btn:hover {
+.game-preview__button-steam:hover {
   background-color: #4458D6;
   color: white !important;
 }
 
-.steam-btn:active {
+.game-preview__button-steam:active {
   opacity: 0.5;
 }
 
-.steam-btn-barbarian {
+.game-preview__button-steam--barbarian {
   float: left;
   width: 72px;
   margin: 15px 5px 15px 5px;
   padding: 12.5px 8px 7.5px 10px;
 }
 
-.steam-btn-barbarian-google {
+.game-preview__button-steam--barbarian-google {
   float: left;
   width: 72px;
   margin: 15px 10px 15px 5px;
   padding: 6.5px 9px 0px 9px;
 }
 
-/*Дикий остров*/
+/*Блок с фотками*/
 
-.features-2 {
-  @include clearfix;
-  width: 100%;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-/*Фотки дикого острова*/
-
-.block-5 {
-  float: left;
-  width: 495px;
-}
-
-.block-5-1 {
-  float: left;
-  margin-left: 10px;
-  border-radius: 10px;
-  margin-top: 5px
-}
-
-.block-5-2 {
-  float: left;
-  margin-left: 10px;
-  border-radius: 10px;
-  margin-top: 5px
-}
-
-.block-5-3 {
-  float: left;
-  margin-left: 10px;
-  margin-top: 15px;
-  border-radius: 10px;
-}
-
-.block-5-4 {
-  float: left;
-  margin-left: 10px;
-  margin-top: 15px;
-  border-radius: 10px;
-}
-
-.block-5-5 {
-  float: left;
-  margin-left: 10px;
-  margin-top: 15px;
-  border-radius: 10px;
-}
-
-.block-5-6 {
-  float: left;
-  margin-left: 10px;
-  margin-top: 15px;
-  border-radius: 10px;
-}
-
-/*Текст дикого острова*/
-
-.block-6 {
-  position: relative;
-  float: right;
-  width: 255px;
-  min-height: 300px;
-  color: white;
-  background: #6B7AD6;
-  margin: 0px 10px 0px 10px;
-}
-
-/*КОНАН*/
-
-.features-3 {
-  @include clearfix;
-  width: 100%;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-/*ТЕКСТ КОНАНА*/
-
-.block-7 {
-  position: relative;
-  float: left;
-  width: 255px;
-  min-height: 300px;
-  color: white;
-  background: #6B7AD6;
-  margin-left: 10px;
-}
-
-.block-8 {
-  height: 325px;
+.game-preview__photo-block {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: center;
+  width: 495px;
+  min-height: 340px;
   justify-content: space-around;
+  align-items: center;
+    @media (max-width: $mobile-widths) {
+      width: 255px;
+      margin-top: 15px;
+      flex-direction: column;
+    }
+    @media (min-width: $desktop-widths) {
+      width: 735px;
+  }
+}
+
+.game-preview__photo {
+  border-radius: 10px;
 }
 
 @media (max-width: $mobile-widths) {
-  .features-2 .block-5 {
-    margin-top: 5px;
-}
 
-  .feature-3 .block-7 {
-    margin-bottom: 5px;
-}
-
-  .features-1,
-  .features-2,
-  .features-3 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    height: 650px;
-    margin: 15px 0px;
-}
-
-  .features-1 {
-    margin: 15px 0px 5px 0px;
-}
-
-  .features-2 {
-    flex-direction: column-reverse;
-}
-
-  .features-3 .block-7 .near-photo-text-1 {
-    font-size: 19px;
-    letter-spacing: 0.75px;
-}
-
-  .block-3 {
-    margin-left: 0px;
-    height: initial;
-}
-
-  .block-5 {
-    float: none;
-    width: 245px;
-    display: flex;
-    flex-direction: column;
-}
-
-  .block-5-2 {
-    margin-top: 15px;
-}
-
-  .block-5-3,
-  .block-5-4,
-  .block-5-5,
-  .block-5-6 {
+  .game-preview__photo-block a:nth-child(3),
+  .game-preview__photo-block a:nth-child(4),
+  .game-preview__photo-block a:nth-child(5),
+  .game-preview__photo-block a:nth-child(6) {
     display: none;
 }
 
-  .block-6 {
-    margin-right: 0px;
-    height: initial;
-}
-
-  .block-7 {
-    margin-left: 0px;
-    height: initial;
-    margin-bottom: 5px;
-}
-
-  .block-8 {
-    width: 245px;
-    height: 300px;
-}
-
-  .near-photo-text-1 {
-    padding: 0px 10px;
-}
-
-  .sort-column-1-link__hidden-text {
-    display: none;
-}
 }
 
 @media (min-width: $tablet-widths) {
-  .features-1,
-  .features-2,
-  .features-3 {
-    @include clearfix;
-    margin: 20px auto;
-    width: 762px;
-}
 
-  .block-5-5,
-  .block-5-6 {
-    display: none;
-}
-
-  .block-8 {
-    width: 490px;
-}
-}
-
-@media (min-width: $desktop-widths) {
-  .features-1,
-  .features-2,
-  .features-3 {
-    @include clearfix;
-    margin: 20px auto;
-    width: 1000px;
-}
-
-.block-5 {
-  width: 735px;
-}
-
-  .block-5-3 {
-    margin-top: 5px;
-}
-
-  .block-5-5,
-  .block-5-6 {
+  .game-preview__photo-block a:nth-child(3),
+  .game-preview__photo-block a:nth-child(4) {
     display: block;
 }
 
-  .features-2 .block-6 {
-    margin-right: 0px;
+  .game-preview__photo-block a:nth-child(5),
+  .game-preview__photo-block a:nth-child(6) {
+    display: none;
 }
 
-  .block-8 {
-    width: 732px;
 }
+
+@media (min-width: $desktop-widths) {
+
+  .game-preview__photo-block a:nth-child(3),
+  .game-preview__photo-block a:nth-child(4),
+  .game-preview__photo-block a:nth-child(5),
+  .game-preview__photo-block a:nth-child(6) {
+    display: block;
+}
+
 }
