--- a/sass/page-header.scss
+++ b/sass/page-header.scss
@@ -115,6 +115,7 @@
 
   .page-header__others {
     background-image: url("../img/header-others-desktop@1x.jpg");
+    background-position: 50% 50%;
 }
 
   .page-header__team {
