--- a/sass/photo-popup.scss
+++ b/sass/photo-popup.scss
@@ -110,7 +110,7 @@
   -moz-transform: rotate(360deg);
   -ms-transform: rotate(360deg);
   -o-transform: rotate(360deg);
-  transform: rotate(360deg);  
+  transform: rotate(360deg);
 }
 
 /* изображения внутри окна */
@@ -123,7 +123,7 @@
 }
 
 /* миниатюры слева/справа */
-.pic-left, 
+.pic-left,
 .pic-right {
   width: 25%;
   height: auto;
@@ -140,12 +140,12 @@
 }
 
 /* элементы м-медиа, фреймы */
-.popup embed, 
+.popup embed,
 .popup iframe {
   top: 0;
   right: 0;
-  bottom: 0; 
-  left: 0; 
+  bottom: 0;
+  left: 0;
   display:block;
   margin: auto;
   min-width: 320px;
@@ -169,17 +169,43 @@
 .popup p {margin: 0; padding: 5px 0}
 
 @media (max-width: $mobile-widths) {
+  .close {
+    top: 200px;
+    right: 0px;
+}
+
+  .close__vertical {
+    top: 280px;
+    right: 0px;
+}
+
   .popup {
-    width: 280px;
-    height: 300px;
+    width: 300px;
+    height: 210px;
     padding: 5px;
 }
 
+  .popup__vertical {
+    width: 280px;
+    height: 300px;
+}
+
   .overlay:target+.popup {
-    top: 18%;
+    top: 30%;
+    border-radius: 30px;
+}
+
+  .overlay:target+.popup__vertical {
+    top: 22%;
+    border-radius: 60px 20px;
 }
 
   .popup img {
+    max-width: 305px;
+    max-height: 290px;
+}
+
+  .popup__vertical img {
     max-width: 270px;
     max-height: 290px;
 }
