--- a/sass/vendors.scss
+++ b/sass/vendors.scss
@@ -1,23 +1,16 @@
 @-moz-document url-prefix() {
 
-  .near-photo-text-1 {
-    font-size: 14px;
+  .game-preview__title {
+    font-size: 18px;
+    padding: 0px 10px;
 }
 
-  .near-photo-text-2 {
-    font-size: 13px;
+  .game-preview__text {
+    font-size: 16px;
 }
 
-  .sort-column-1-link {
-    padding: 18px 4px;
-}
-
-  .sort-column-1-link-barbarian-rus p {
-    letter-spacing: 0px;
-}
-
-  .sort-column-1-link p {
-    font-size: 9px;
+  .game-preview__button-details p {
+    font-size: 11px;
 }
 
 }
