--- a/sass/white-block.scss
+++ b/sass/white-block.scss
@@ -80,6 +80,10 @@
   }
 }
 
+.white-block__button--short {
+  width: 250px;
+}
+
 .white-block__button span {
   display: block;
   margin: 0 auto;
@@ -103,7 +107,7 @@
   flex-direction: column;
   float: left;
   width: 500px;
-  height: 525px;
+  height: 560px;
   margin-left: 40px;
   margin-top: 20px;
 }
@@ -118,7 +122,7 @@
   display: flex;
   flex-direction: column;
   float: left;
-  height: 525px;
+  height: 560px;
   margin-left: 25px;
   margin-top: 20px;
 }
@@ -195,6 +199,27 @@
   width: 195px;
   height: 65px;
   border: none;
+}
+
+.white-block__button-contacts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 96%;
+  height: 50px;
+  box-sizing: border-box;
+  margin: 15px 10px;
+  padding: 15px 20px;
+  text-decoration: none;
+  color: #fff;
+  background-color: #051471;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.white-block__button-contacts:hover {
+  background-color: #4458D6;
+  color: white !important;
 }
 
 .white-block__background-others-monster {
@@ -530,5 +555,9 @@
 
   .white-block__background-others-monster {
     background-position: 50% 50%;
+}
+
+.white-block__button--short {
+  width: 280px;
 }
 }
