--- a/sass/body.scss
+++ b/sass/body.scss
@@ -1,7 +1,7 @@
   body {
     font-size: 14px;
     line-height: 27px;
-    font-family: "PT Sans Narrow", Arial, sans-serif;
+    font-family: $main-font;
     font-weight: 300;
     font-style: normal;
     margin: 0 auto;
