--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -47,4 +47,4 @@ $light-red: #ff5c5c;
 $silver: #c1c1c1;
 
 // Fonts
-$pt-sans: "PT Sans", "Arial", sans-serif;
+$main-font: "PT Sans", "Tahoma", sans-serif;
