--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -1,7 +1,15 @@
-  @font-face {
-    font-weight: normal;
-    font-family: "PT Sans Narrow";
-    font-style: normal;
-    src: url("fonts/ptsans.woff") format("woff"),
-    url("fonts/ptsans.woff") format("woff");
+@font-face {
+  font-family: "PT Sans";
+  src: url("../fonts/ptsans.woff") format("woff"),
+       url("../fonts/ptsans.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "PT Sans";
+  src: url("../fonts/ptsansbold.woff") format("woff"),
+       url("../fonts/ptsansbold.woff2") format("woff2");
+  font-weight: bold;
+  font-style: normal;
 }
