--- a/sass/white-block.scss
+++ b/sass/white-block.scss
@@ -151,13 +151,27 @@
 
 .youtube-group {
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
   float: left;
   width: 500px;
   height: 525px;
   margin-left: 40px;
   margin-top: 30px;
+}
+
+.youtube-group__video {
+  width: 245px;
+  height: 205px;
+    @media (min-width: $tablet-widths) {
+      width: 300px;
+      height: 205px;
+    }
+    @media (min-width: $desktop-widths) {
+      width: 400px;
+      height: 205px;
+    }
 }
 
 .photo-three-line__in-white-block {
@@ -510,8 +524,8 @@
 }
 
   .twit-group_index-page {
-    width: 1160px;
-    margin: 0px 17px;
+    width: 1100px;
+    margin: 0px 47px;
 }
 
   .youtube-group {
@@ -557,7 +571,7 @@
     background-position: 50% 50%;
 }
 
-.white-block__button--short {
-  width: 280px;
+  .white-block__button--short {
+    width: 280px;
 }
 }
