--- a/sass/white-block.scss
+++ b/sass/white-block.scss
@@ -312,6 +312,10 @@
     margin: 15px 45px 0px 45px;
 }
 
+  .white-block__google-form {
+    margin: 20px 0px;
+}
+
   .vk-group {
     width: 245px;
     margin-left: 0px;
