--- a/sass/white-block.scss
+++ b/sass/white-block.scss
@@ -248,6 +248,10 @@
   text-align: center;
 }
 
+.white-block__google-form {
+
+}
+
 .white-block__button-contacts:hover {
   background-color: #4458D6;
   color: white !important;
