--- a/sass/games-preview.scss
+++ b/sass/games-preview.scss
@@ -25,7 +25,7 @@
     @media (min-width: $desktop-widths) {
       width: 1100px;
       padding: 20px 5px;
-      &:nth-of-type(2) {
+      &:nth-of-type(2n) {
         flex-direction: row-reverse;
       }
     }
