--- a/sass/white-block.scss
+++ b/sass/white-block.scss
@@ -257,6 +257,12 @@
   color: white !important;
 }
 
+.white-block__background-others-adventurous {
+  background-image: url("../img/games-adventurous-background.jpg");
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
 .white-block__background-others-monster {
   background-image: url("../img/others-games-1-background.jpg");
   background-size: cover;
